# rnd-stuff

./: .flake8  .gitignore  .mypy.ini  jptr.sh  pyproject.toml
data/: sp500-ust-10plus.csv
nbooks/: CLT.ipynb  assets-ml.ipynb  assets.ipynb  bonds-pf.ipynb  corp-fixed-income.ipynb  ffr-market.ipynb  gold.ipynb  reit.ipynb  stocks-returns.ipynb  ust-total-returns.ipynb
rnd_stuff/: tr_approx.py
rnd_stuff/stonks/: __init__.py  acc.py  dataset.py  env.py  errors.py  grab.py  tmp.py
tests/rnd_stuff/stonks/: test_dataset.py
