[tool.poetry]
name = "rnd-stuff"
version = "0.0.1"
description = ""
authors = ["cvb <ccvb3291@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
toolz = "^0.11.1"
numpy = "^1.20.2"
scipy = "^1.6.2"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
yfinance = "^0.1.59"
seaborn = "^0.11.1"
fire = "^0.4.0"
pandas-datareader = "^0.10.0"
pytest = "^6.2.5"
scikit-learn = "^1.0.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
mypy = "^0.910"
flake8 = "^4.0.1"
hypothesis = {extras = ["pandas"], version = "^6.24.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
